osh/openstack/10-neutron/manifests/neutron/templates/deployment-server.yaml
---
# Source: neutron/templates/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neutron-server
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: neutron
    application: neutron
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: neutron
      application: neutron
      component: server
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: neutron
        application: neutron
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "3b17fadc4799090e9f5d65201d90080ae322cff710e2b448a8f9d2c92555a57d"
        configmap-etc-hash: "8d40486ba02b179f936d965abf7620d143af7a92ef99bde50fbd5ed9870833d2"
        
    spec:
      securityContext:
        runAsUser: 42424
      serviceAccountName: neutron-server
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - neutron
                  - key: application
                    operator: In
                    values:
                    - neutron
                  - key: component
                    operator: In
                    values:
                    - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled

      terminationGracePeriodSeconds: 30
      containers:
        - name: neutron-server
          image: "docker.io/openstackhelm/neutron:2023.1-ubuntu_jammy"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 15000m
              memory: 15024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /
              port: 9696
              scheme: HTTP
            periodSeconds: 15
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9696
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 10
          command:
            - /tmp/neutron-server.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/neutron-server.sh
                  - stop
          ports:
            - name: q-api
              containerPort: 9696
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-shared
              mountPath: /tmp/pod-shared
            - name: pod-var-neutron
              mountPath: /var/lib/neutron
            - name: neutron-bin
              mountPath: /tmp/neutron-server.sh
              subPath: neutron-server.sh
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/neutron.conf
              subPath: neutron.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/plugins/ml2/ml2_conf.ini
              subPath: ml2_conf.ini
              readOnly: true
            
            - name: neutron-etc
              mountPath: /etc/neutron/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/policy.yaml
              subPath: policy.yaml
              readOnly: true                                    

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-shared
          emptyDir: {}
        - name: pod-var-neutron
          emptyDir: {}
        - name: neutron-bin
          configMap:
            name: neutron-bin
            defaultMode: 0555
        - name: neutron-etc
          secret:
            secretName: neutron-etc
            defaultMode: 0444
